# rb-core.backend

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
docs/: dev.md  logging.md  read_data_notes.md
rb_core_backend/: data_management.py  mongo.py  preprocess_dataset.py  read_data.py  util.py
rb_core_backend/external_sources/: index.py  kaggle.py  model.py  util.py
